--- a/Views/Book/Delete.cshtml
+++ b/Views/Book/Delete.cshtml
@@ -6,31 +6,40 @@
 
 <div class="container-md" style="padding: 50px;">
     <h1>Delete Book</h1>
+    <h3 class="text-danger">Are you sure you want to permanently delete this book?</h3>
+    <hr />
 
-    <h3>Are you sure you want to delete this book?</h3>
     <div>
-        <h4>Book: @Html.DisplayFor(model => model.Title)</h4>
-        <hr />
+        <h4>Book Details:</h4>
         <dl class="row">
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.Title)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.Title)
-            </dd>
-            <dt class="col-sm-3">
-                @Html.DisplayNameFor(model => model.AuthorName)
-            </dt>
-            <dd class="col-sm-9">
-                @Html.DisplayFor(model => model.AuthorName)
-            </dd>
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Title)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Title)</dd>
+
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.AuthorName)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.AuthorName)</dd>
+
+            @* 🔑 ADDED: Display Year *@
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.PublicationYear)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.PublicationYear)</dd>
+
+            @* 🔑 ADDED: Display Genre *@
+            <dt class="col-sm-3">@Html.DisplayNameFor(model => model.Genre)</dt>
+            <dd class="col-sm-9">@Html.DisplayFor(model => model.Genre)</dd>
+
+            @* 🔑 ADDED: Display Cover Image *@
+            @if (!string.IsNullOrEmpty(Model.CoverImageUrl))
+            {
+                <dt class="col-sm-3">Cover:</dt>
+                <dd class="col-sm-9">
+                    <img src="@Model.CoverImageUrl" alt="Cover Image" style="max-height: 150px; border-radius: 5px;" />
+                </dd>
+            }
         </dl>
 
-        @* {{-- The form posts to the HTTP POST DeleteConfirmed action, passing the ID --}} *@
         <form asp-action="Delete">
             <input type="hidden" asp-for="BookId" />
-            <input type="submit" value="Delete" class="btn btn-danger" />
-            <a asp-action="Index" class="btn btn-secondary">Back to List</a>
+            <input type="submit" value="Delete Permanently" class="btn btn-danger" /> |
+            <a asp-action="Index" class="btn btn-secondary">Cancel</a>
         </form>
     </div>
 </div>
