--- a/Views/Loan/MyLoans.cshtml
+++ b/Views/Loan/MyLoans.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "My Active Loans";
 }
 
-<div class="container"> 
+<div class="container" style="padding-top: 50px"> 
 
     <h2>My Active Digital Access</h2>
     <hr />
