--- a/Views/Book/Edit.cshtml
+++ b/Views/Book/Edit.cshtml
@@ -49,17 +49,33 @@
                     <div class="col-md-6 mb-3">
                         <label asp-for="Genre" class="control-label"></label>
                         <select asp-for="Genre" class="form-select">
-                            @* Using form-select for Bootstrap 5 dropdown styling *@
                             <option value="">-- Select Genre --</option>
-                            <option value="Fiction">Fiction</option>
-                            <option value="Science Fiction">Science Fiction</option>
-                            <option value="Mystery">Mystery</option>
-                            <option value="Thriller">Thriller</option>
-                            <option value="History">History</option>
+
+                            <option value="Adventure">Adventure</option>
+                            <option value="Art">Art</option>
+                            <option value="Autobiography">Autobiography</option>
                             <option value="Biography">Biography</option>
+                            <option value="Cookbook">Cookbook</option>
+                            <option value="Drama">Drama</option>
+                            <option value="Fantasy">Fantasy</option>
+                            <option value="Fiction">Fiction</option>
+                            <option value="Historical Fiction">Historical Fiction</option>
+                            <option value="History">History</option>
+                            <option value="Horror">Horror</option>
+                            <option value="Mystery">Mystery</option>
+                            <option value="Other">Other</option>
+                            <option value="Philosophy">Philosophy</option>
+                            <option value="Poetry">Poetry</option>
+                            <option value="Religion">Religion</option>
+                            <option value="Romance">Romance</option>
                             <option value="Science">Science</option>
+                            <option value="Science Fiction">Science Fiction</option>
+                            <option value="Self-Help">Self-Help</option>
                             <option value="Technology">Technology</option>
-                            @* Add more genres as needed *@
+                            <option value="Thriller">Thriller</option>
+                            <option value="Travel">Travel</option>
+                            <option value="Young Adult">Young Adult (YA)</option>
+
                         </select>
                         <span asp-validation-for="Genre" class="text-danger"></span>
                     </div>
